<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    app:cardCornerRadius="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/user_profile_picture_card"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:elevation="12dp"
            app:cardCornerRadius="90dp"
            android:layout_centerHorizontal="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp">
            <ImageView
                android:id="@+id/user_picture_iv"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/icone_of_the_user">
            </ImageView>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ramzy_kermad"
            android:textColor="@color/text_view_adaptive_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintRight_toLeftOf="@+id/cardView"
            app:layout_constraintLeft_toRightOf="@+id/user_profile_picture_card"
            app:layout_constraintTop_toTopOf="@+id/user_profile_picture_card"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/last_message_tv"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="hellooaizeoziajaozejaoizjeoazij"
            android:lines="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/text_view_adaptive_color"
            android:textSize="12sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toRightOf="@+id/user_profile_picture_card"
            app:layout_constraintTop_toBottomOf="@+id/user_name_tv"
            android:layout_marginStart="15dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:cardCornerRadius="30dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/user_profile_picture_card"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/user_profile_picture_card"
            app:cardBackgroundColor="@color/splashColorAccent">

            <TextView
                android:id="@+id/messages_count_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_99"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>